--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>本体</title>
+    <title>亚信科技本体</title>
+    <link rel="icon" type="image/png" href="./imgs/favicon.png">
     <link rel="stylesheet" href="./lib/element-plus/index.min.css">
     <link rel="stylesheet" href="./css/index.css">
     <script src="./lib/vue@3/index.min.js"></script>
