--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="resource">
-                    <img src="./imgs/resource-bg-circle.png"/>
+                    <!--<img src="./imgs/resource-bg-circle.png"/>-->
 
                     <div class="content">
                         <div
