--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                                 v-for="item in [
                                                     { text: '网络资源本体' },
                                                     { text: '核心网本体' },
-                                                    { text: '自智网络本体', active: true },
+                                                    { text: '物联网故障工单本体', active: true },
                                                     { text: '无线质量本体' },
                                                     { text: '资源数据自愈本体' },
                                                     { text: '云网数字孪生本体' }
@@ -744,4 +744,5 @@
         app.mount('#app');
     </script>
 </body>
+
 </html>
