--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>本体开源</title>
-    <link rel="icon" type="image/png" href="./imgs/favicon.png">
+    <link rel="icon" type="image/png" href="./imgs/logo1.png">
     <link rel="stylesheet" href="./lib/element-plus/index.min.css">
     <link rel="stylesheet" href="./css/index.css">
     <script src="./lib/vue@3/index.min.js"></script>
@@ -398,3 +398,4 @@
 </body>
 
 </html>
+
