--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                 </div>
                                 <div
                                     class="card-descr">
-                                    本体开源项目采用OWL（RDF/XML）标准发布，用户可通过GitHub获取。文件含版本IRI，便于追踪更新。标准化格式提升互操作性，支持无缝集成。我们还提供详细文档和支持资源，助力用户快速上手，推动企业智能化转型。
+                                    本体开源项目基于通用资源描述框架标准发布，用户可通过GitHub获取完整资源。所有文件均包含版本化IRI标识符，确保更新可追溯。通过标准化数据模型与开放格式，项目实现了跨平台互操作性，支持与主流工具无缝集成。
                                 </div>
                             </div>
                             <div
@@ -398,4 +398,5 @@
 </body>
 
 </html>
+
 
