--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                 </div>
                                 <div
                                     class="card-descr">
-                                    本体开源项目基于通用资源描述框架标准发布，用户可通过GitHub获取完整资源。所有文件均包含版本化IRI标识符，确保更新可追溯。通过标准化数据模型与开放格式，项目实现了跨平台互操作性，支持与主流工具无缝集成。
+                                    本体开源项目采用OWL（RDF/XML）标准发布，用户可通过GitHub获取完整资源。所有文件均包含版本化IRI标识符，确保更新可追溯。通过标准化数据模型与开放格式，项目实现了跨平台互操作性，支持与主流工具无缝集成。
                                 </div>
                             </div>
                             <div
@@ -398,5 +398,6 @@
 </body>
 
 </html>
+
 
 
