--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 Ontology4AI
                             </div>
                             <div class="descr">
-                                Ontology4AI一个多家机构合作的中立组织，旨在汇聚AI时代各行业领域的本体模型，共同打造企业认知的“操作系统”，为大模型赋予结构化世界观。通过打通语义理解、逻辑推理与系统执行的闭环，实现可解释、可追溯、可控制，让AI从“泛化生成”跃迁至“精准决策”，成为企业战略落地的数字引擎。
+                                Ontology4AI一个本体开源项目，旨在汇聚AI时代各行业领域的本体模型，共同打造企业认知的“操作系统”，为大模型赋予结构化世界观。通过打通语义理解、逻辑推理与系统执行的闭环，实现可解释、可追溯、可控制，让AI从“泛化生成”跃迁至“精准决策”，成为企业战略落地的数字引擎。
                             </div>
                             <div class="btn-group">
                                 <el-button
@@ -577,4 +577,5 @@
         app.mount('#app');
     </script>
 </body>
+
 </html>
