--- a/index.html
+++ b/index.html
@@ -436,12 +436,13 @@
                             class="card-list">
                             <div
                                 class="card">
-                                <img src="./imgs/中国移动.png"/>
+                                <img style="width: calc(100% - 40px); height: auto" src="./imgs/电信研究院.png"/>
                             </div>
                             <div
                                 class="card">
-                                <img style="width: calc(100% - 40px); height: auto" src="./imgs/电信研究院.png"/>
+                                <img src="./imgs/中信科移动.png"/>
                             </div>
+                            
                              <div
                                 class="card">
                                 <img src="./imgs/高通.png"/>
@@ -579,3 +580,4 @@
 </body>
 
 </html>
+
