--- a/index.html
+++ b/index.html
@@ -436,11 +436,20 @@
                             class="card-list">
                             <div
                                 class="card">
-                                <img style="width: calc(100% - 40px); height: auto" src="./imgs/电信研究院.png"/>
+                                <img src="./imgs/中国移动.png"/>
                             </div>
+                            <!-- <div
+                                class="card">
+                                <img style="width: calc(100% - 40px); height: auto" src="./imgs/电信研究院.png"/>
+                            </div>-->
                             <div
                                 class="card">
                                 <img src="./imgs/中信科移动.png"/>
+                            </div>
+
+                            <div
+                                class="card">
+                                <img src="./imgs/intel.png"/>
                             </div>
                             
                              <div
@@ -487,6 +496,10 @@
                             <div
                                 class="card">
                                 <img src="./imgs/香港理工.png"/>
+                            </div>  
+                            <div
+                                class="card">
+                                <img src="./imgs/IEEEpng.png"/>
                             </div>  
                            
                         </div>
@@ -580,4 +593,5 @@
 </body>
 
 </html>
+
 
