--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                                         Autonomous Network Ontology
                                     </div>
                                     <div class="card-descr">
-                                        自智网络的本体（Autonomous Network Ontology，AN Ontology）是对自智网络领域中的核心概念、实体、属性、关系以及约束规则进行的形式化、明确化的规范定义。它充当机器的“世界模型”，为智能体提供精确的推理依据，确保自然语言交互的准确性，并将高层业务意图转化为可执行的网络策略，是实现L4/L5级自智网络自动化与闭环决策的核心基石。
+                                        自智网络本体（Autonomous Network Ontology，AN Ontology）是对自智网络领域中的核心概念、实体、属性、关系以及约束规则进行的形式化、明确化的规范定义。它充当机器的“世界模型”，为智能体提供精确的推理依据，确保自然语言交互的准确性，并将高层业务意图转化为可执行的网络策略，是实现L4/L5级自智网络自动化与闭环决策的核心基石。
                                     </div>
                                     <div class="card-btn">
                                         <el-button
@@ -593,5 +593,6 @@
 </body>
 
 </html>
+
 
 
